# ai-workshop-2024

./: .env.example  .gitignore  README.md  README_zh.md  chat_ui.py  connection.py  convert_headings.py  embed_docs.py  embed_imgs.py  flow_ui.py  i18n.py  image_search_ui.py  pyproject.toml
agents/: base.py  intent_guard_agent.py  rag_agent.py  universe_rag_agent.py
cv/: image_store.py  image_store_milk.py
rag/: doc_rag.py  documents.py  embeddings.py  zhipu_embeddings.py
utils/: connect_db.sh  create_db.sh  extract.py  load.py  prepare_bgem3.py
