[tool.poetry]
name = "ai-workshop"
version = "0.1.0"
description = ""
authors = ["yuyi <yuyi.wsy@oceanbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
streamlit = "^1.38.0"
pyobvector = "0.1.4"
langchain-community = { git = "https://github.com/GITHUBear/ob-langchain.git", rev = "main" }
flagembedding = "^1.2.11"
peft = { version = "^0.13.1" }
towhee = { version = "^1.1.3", extras = ["cv"] }
opencv-python = { version = "^4.10.0.84", extras = ["cv"] }
torchvision = { version = "^0.19.1", extras = ["cv"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"